--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
     <title>Hello Coursera</title>
 </head>
 <body>
-    <h1>Coursera Hello</h1>
+    <h1>Hello Coursera. It is the best course page.</h1>
 </body>
 </html>
